2013-11-12  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/59088
	* config/i386/x86-tune.def (X86_TUNE_SSE_UNALIGNED_LOAD_OPTIMAL):
	Set for m_HASWELL.
	(X86_TUNE_SSE_UNALIGNED_STORE_OPTIMAL): Set for m_HASWELL.

2013-11-12  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/59084
	* config/i386/i386.c (ix86_option_override_internal): Check
	X86_TUNE_AVX256_UNALIGNED_LOAD_OPTIMAL and
	X86_TUNE_AVX256_UNALIGNED_STORE_OPTIMAL for
	MASK_AVX256_SPLIT_UNALIGNED_LOAD and
	MASK_AVX256_SPLIT_UNALIGNED_STORE.

	* config/i386/x86-tune.def (X86_TUNE_AVX256_UNALIGNED_LOAD_OPTIMAL):
	Clear m_COREI7_AVX and update comments.
	(X86_TUNE_AVX256_UNALIGNED_STORE_OPTIMAL): Likewise.

2013-11-12  Martin Jambor  <mjambor@suse.cz>

	PR rtl-optimization/10474
	* ira.c (interesting_dest_for_shprep): New function.
	(split_live_ranges_for_shrink_wrap): Likewise.
	(find_moveable_pseudos): Move calculation of dominance info,
	df_analysios and the final anlyses to...
	(ira): ...here, call split_live_ranges_for_shrink_wrap.

2013-11-12  Bin Cheng  <bin.cheng@arm.com>

	* tree-ssa-loop-ivopts.c (force_expr_to_var_cost): Refactor the code.
	Handle type conversion.

2013-11-11  Martin Liska  <marxin.liska@gmail.com>
						Jan Hubicka  <jh@suse.cz>

	* cgraph.c (dump_cgraph_node): Profile dump added.
	* cgraph.h (struct cgraph_node): New time profile variable added.
	* cgraphclones.c (cgraph_clone_node): Time profile is cloned.
	* gcov-io.h (gcov_type): New profiler type introduced.
	* ipa-profile.c (lto_output_node): Streaming for time profile added.
	(input_node): Time profiler is read from LTO stream.
	* predict.c (maybe_hot_count_p): Hot prediction changed.
	* profile.c (instrument_values): New case for time profiler added.
	(compute_value_histograms): Read of time profile.
	* tree-pretty-print.c (dump_function_header): Time profiler is dumped.
	* tree-profile.c (init_ic_make_global_vars): Time profiler function added.
	(gimple_init_edge_profiler): TP function instrumentation.